warning 수정